--- a/views/index.html
+++ b/views/index.html
@@ -5,13 +5,15 @@
 <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="https://cdn.bootcss.com/vue/2.5.13/vue.min.js"></script>
 <body>
-<%= title %>
+    <% for (var item in data){ %>
+    <%=  item %>
+    <%=  data[item] %>
+    <% }; %>
 <input id="user_id">
 <button id="submit">提交</button>
 <script>
     $(document).ready(function() {
         $("button").click(function () {
-
             $.post("/",
                 {
                     user_id: $('#user_id').val()
