--- a/views/index.html
+++ b/views/index.html
@@ -36,7 +36,12 @@
     </div>
 
 </div>
-<div style="margin-top: 50px ;margin-left: 16%" class="row" id="content"></div>
+<footer  class="footer navbar-fixed-bottom ">
+    <div style="text-align: center">
+        <li><a  style="color: black" href="http://www.miibeian.gov.cn/" target="_blank">京ICP备18004070号</a></li>
+    </div>
+
+</footer>
 </body>
 <script>
     $(document).ready(function () {
