--- a/views/index.html
+++ b/views/index.html
@@ -34,14 +34,14 @@
             </div>
         </div>
     </div>
+    <footer style="margin-top: 100%" class="footer navbar-fixed-bottom ">
+        <div style="text-align: center">
+            <li><a  style="color: black" href="http://www.miibeian.gov.cn/" target="_blank">京ICP备18004070号</a></li>
+        </div>
 
+    </footer>
 </div>
-<footer  class="footer navbar-fixed-bottom ">
-    <div style="text-align: center">
-        <li><a  style="color: black" href="http://www.miibeian.gov.cn/" target="_blank">京ICP备18004070号</a></li>
-    </div>
 
-</footer>
 </body>
 <script>
     $(document).ready(function () {
