--- a/views/index.html
+++ b/views/index.html
@@ -52,7 +52,7 @@
             if( $('#user_limit').val() ==''){
                 user_limit='100';
             }
-             if (parseInt(user_limit)<200 && parseInt(user_limit)>1  ){
+             if (parseInt(user_limit)<=200 && parseInt(user_limit)>=1  ){
                  $.post("/",
                      {
                          user_name: $('#user_name').val()
@@ -69,7 +69,7 @@
                      });
              }
              else{
-                 alert('输入用户数错误，请重新输入');
+                 alert('输入用户数范围为0-200，请重新检查');
              }
         });
 
