--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta name=”viewport” content=”width=device-width, initial-scale=1″ />
+
 
 <link rel="stylesheet" type="text/css" href="stylesheets/style.css"/>
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
