--- a/views/result.html
+++ b/views/result.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta name=”viewport” content=”width=device-width, initial-scale=1″ />
+
+
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 <link href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
